--- a/front/section_1/section_1_style.css
+++ b/front/section_1/section_1_style.css
@@ -1,84 +1,166 @@
+@import url("https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap");
+
 body {
-    background-color: #0b1c2d; 
-    border-bottom-right-radius: 16px;
-   
+  background-color: #0b1c2d;
+  border-bottom-right-radius: 16px;
 }
 .navbar-container {
-    background-color: #0b1c2d; 
+  background-color: #0b1c2d;
 }
-.navbar-nav .nav-link {
-    color: white !important;
-    font-weight: 500;
-    padding: 10px 15px;
-    display: flex;
-    justify-content: center;
+
+.item-nav {
+  color: #fff;
+  /* Navigation */
+  font-family: Rubik;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 100%; /* 16px */
+  letter-spacing: 0.16px;
 }
 .navbar-nav .nav-link:hover {
-    color: #00a8ff !important; 
+  color: #00a8ff !important;
 }
-.contact {
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-}
-.contact img {
-    width: 40px;
-    height: 40px;
-    margin-right: 10px;
-}
-.contact h6 {
-    margin: 0;
-    color: white;
-    font-size: 14px;
-}
-.contact p a {
-    text-decoration: none;
-    font-weight: bold;
-    color: #00a8ff;
-}
-.contact p a:hover {
-    color: #0077cc;
-}
-span{
-  font-weight: bolder;
-  text-transform: capitalize;
-  color: #00a8ff;
 
+.contact a {
+  text-decoration: none;
+}
+
+.contact {
+  align-items: center;
+  justify-content: flex-end;
+}
+
+.contact img {
+  width: 40%;
+  height: 40%;
+}
+
+.contact h6 {
+  color: var(--Color, #f1f1f1);
+  margin: 0px;
+
+  /* Caption 1 */
+  font-family: Rubik;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 140%; /* 16.8px */
+}
+
+.contact h5 a{
+  color: var(--White, #fff);
+  margin: 0px;
+
+  /* Heading 5 */
+  font-family: Rubik;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 140%; /* 33.6px */
+}
+
+.first-char-slogan {
+  color: #2b9cb8;
+  font-family: Rubik;
+  font-size: 64px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 120%; /* 76.8px */
+}
+.slogan {
+  color: #fff;
+  font-family: Rubik;
+  font-size: 64px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 120%;
 }
 .carousel-container {
-    width: 100%;
-    overflow: hidden;
-    height: 600px;
-    position: relative;
-    margin-top: 20px;
-    display: flex;
-    gap: 20px;
+  width: 100%;
+  overflow: hidden;
+  height: 600px;
+  position: relative;
+  margin-top: 20px;
+  display: flex;
+  gap: 20px;
 }
 .image-track {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    position: relative;
-    animation: scrollImages 5s linear infinite;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  position: relative;
+  animation: scrollImages 5s linear infinite;
 }
 .image-track img {
-    width: 200px;
-    height: 400px;
-    border: 2px solid #00a8ff;
-    border-radius: 15px;
-    object-fit: cover;
-    margin-left: 13px;
-    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
+  width: 200px;
+  height: 400px;
+  border-radius: 15px;
+  object-fit: cover;
+  margin-left: 13px;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
 }
 @keyframes scrollImages {
-    0% {
-        transform: translateY(0);
-    }
-    100% {
-        transform: translateY(-100%);
-    }
+  0% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: translateY(-100%);
+  }
 }
-#section_uno{
-    background-color: #0b1c2d;
-    border-bottom-right-radius: 80px;
+#section_uno {
+  background-color: #0b1c2d;
+  border-bottom-right-radius: 80px;
+}
+
+.robotics_club_cmc {
+  color: #26b3d6;
+
+  /* Sub Heading */
+  font-family: Rubik;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 100%; /* 20px */
+  text-transform: uppercase;
+}
+
+.description_club {
+  color: #fff;
+
+  /* Body 1 */
+  font-family: Rubik;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: 160%; /* 32px */
+}
+
+.buttons {
+  color: var(--White, #fff);
+  border-radius: 15px;
+  background: #2b9cb8;
+  text-decoration: none;
+  display: inline-flex;
+  padding: 24px 34px;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  text-align: center;
+  font-family: Rubik;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 100%;
+}
+
+.trusted-text {
+  color: var(--Color, #f1f1f1);
+
+  /* Body 2 */
+  font-family: Rubik;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 160%; /* 25.6px */
 }
