--- a/front/section_3/style.css
+++ b/front/section_3/style.css
@@ -1,61 +1,73 @@
-:root {
-  --primary:#2B9CB8;
-  --background:#071731;
-  --w:#fff;
-  --b:#000;
+@import url("https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap");
+.buttons {
+  color: var(--White, #fff);
+  border-radius: 15px;
+  background: #2b9cb8;
+  text-decoration: none;
+  display: inline-flex;
+  padding: 24px 34px;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  text-align: center;
+  font-family: Rubik;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 100%;
 }
-
-body {
-  padding: 18px;
-  color: var(--w);
-  background-color: var(--background);
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  height: 100vh;
+#section_3{
+  border-top-left-radius: 16px;
+  background-color: #0b1c2d;
+position: relative;
+  
 }
-
-.container {
+.text3 .round{
   position: absolute;
-  display: flex;
-  justify-content: space-around;
-}
-.container .left {
-  position: relative;
-  padding: 8px;
-  width: 50%;
-}
-.container .left h6 {
-  font-Weight: 500;
-  font-size: 20px;
-  line-height: 20px;
-  color: var(--primary);
-}
-.container .left h1 {
-  font-weight: 600;
-  font-size: 40px;
-  line-height: 78.4px;
-}
-.container .left .p1 {
-  font-size: 15px;
-  font-weight: 100;
-  line-height: 32px;
-}
-.container .left ul {
-  list-style: none;
-}
-.container .left hr {
-  color: var(--w);
-}
-.container .left .p2 {
-  font-weight: 600;
-  font-size: 24px;
-  line-height: 33.6px;
-}
-.container .left button {
-  background-color: var(--primary);
-  border-radius: 8px;
-  border: none;
-  padding: 9px;
-  color: var(--w);
+  top: 0;
+  left: 0;
 }
 
-/*# sourceMappingURL=style.css.map */
+.text3 {margin-top: 30px;}
+.text3 .mini{
+  color: #00a8ff;
+
+
+}
+.text3 .sec3{
+  font-family: Rubik;
+  font-weight: 600;
+  font-size: 50px;
+  color: #f1f1f1;
+}
+.pra3{
+  font-size: 20px;
+  font-weight: 400;
+  font-family: Rubik;
+  line-height: 28px;
+
+}
+ul li{
+ margin-left: 5px;
+ color: #f1f1f1;
+  list-style: none;
+  font-size: 20px;
+  font-weight: 400;
+  font-family: Rubik;
+  line-height: 28px;
+
+}
+
+.p2{
+  font-size: 20px;
+  font-weight: 400;
+  font-family: Rubik;
+  line-height: 28px;
+}
+ul li img{
+  margin-right: 5px;
+}
+.image_3 img{
+  width: 120%;
+  
+}
