--- a/front/All_Section/Our_Team/section3/section3.css
+++ b/front/All_Section/Our_Team/section3/section3.css
@@ -1,8 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap");
 .sec3_our_team{
-    background-color: #071731;
+    background-color: #071731 !important;
     border-radius: 60px 0px;
-}
+} 
 .div1_sec3_our_team{
     width: fixed(367);
     height: fixed(82px);
@@ -121,7 +121,7 @@
 .parent_sec3_our_team{
     color: #FFFFFF;
     box-shadow: 0px 10px 50px 6px #FFFFFF ;
-    margin-left: 250px;
+    margin: auto;
     width: 800px;
 }
 .les_images_à_gauche{
