--- a/front/All_Section/Events/section3/section3.css
+++ b/front/All_Section/Events/section3/section3.css
@@ -1,171 +1,115 @@
-@import url('C:\Users\pc\Robotics_Club_WebSite\front\All_Section\Events\section3\GameOfSquids.ttf');
-div h1{
-    color: white;
-    font-family: 'GameOfSquids', sans-serif;
-    font-weight: bold;
-    font-size: 100px;
-
-}
-body{
-    background-color: #0B1E37 !important;
-}
-/* #section_3{
-    background-color: #0B1E37;
-    height: 100vh;
-} */
-
-div h5{
-    color: white;
-    margin-top: 50px;
-}
-DIV h6{
-    color: white;
-}
-/* .article1{
-    background-color: #2B9CB8;
-    width: 100px;
-    height: 200px;
-    border-radius: 10px;
-    border-top-left-radius: 0%;
-    border-bottom-left-radius: 0%;
-    position: relative;
-    padding-right: 10px;
-    
-    
-}
-.article2{
-    background-color: #E4407D;
-    width:100px;
-    height: 200px;
-    border-radius: 10px;
-    border-bottom-right-radius: 0%;
-    border-bottom-right-radius: 0%;
-    border-top-right-radius: 0%;
-    position: relative;
-    
-}
-.article3{
-    height: 30px;
-    width: 50%;
-    background-color: #2B9CB8;
-    border-radius: 10px;
-    border-top-left-radius: 0%;
-    border-bottom-left-radius: 0%;
-    border: 2px solid #ffffff;
-
-}
-.article4{
-    height: 30px;
-    width: 50%;
-    background-color: #E4407D;
-    border-radius: 10px;
-    border-bottom-right-radius: 0%;
-    border-bottom-right-radius: 0%;
-    border-top-right-radius: 0%;
-    border-color: white ;
-    border: 2px solid #ffffff;
-} */
-
-/* .bg1{
-    position: absolute;
-    height: auto;
-    width:500px;
-    z-index: -1;
-    left: 0;
-
-}
-.bg2{
-    position: absolute;
-    height:auto;
-    width: 500px;
-    z-index: -1;
-    right: 0;
-}
-.pic1{
-    position: absolute;
-    bottom: 0;
-    width: 250PX;
-    height: auto;
-    left: 0;
-    
-   
-}
-.pic2{
-    position: absolute;
-    bottom: 0;
-    width: 250PX;
-    height: auto;
-    right: 0;
-   
-}
-.pic3{
-    position: absolute;
-    bottom: 0;
-    width: 250PX;
-    height: auto;
-    left: 250px;
-    
-   
-}
-.article1{
-    width: 90%;
-    height: auto;
-    position: absolute;
-    right: 0;
-
-}
-.article2{
-    width: 50%;
-    height: auto;
-    margin-right: 0;
-    position: absolute;
-    right: 0;
-
-}
-.article21{
-    
-    right: 0;
-    position: absolute;
-} */
-.Div1{
-    position: relative;
-}
-.Div2{
-    position: relative;
+.S3 {
+  width: 100%;
+  height: 100vh;
+  background-color: #071731;
+  background-image: url("./assets/Section\ 3.svg");
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
-.article1{
-    position: absolute;
-    right: 0;
+.title-h2 {
+  color: #fff;
+  text-align: center;
+  font-family: "Game Of Squids";
+  font-size: 35px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  
 }
-.article2{
-    position: absolute;
-    left: 0;
+
+.title-h1 {
+  color: #fff;
+  text-align: center;
+  font-family: "Game Of Squids";
+  font-size: 60px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  
 }
-.article3{
-    width: 100%;
-    height: auto;
-    position: absolute;
-    right: 0;
+
+.subtitle {
+  color: #fff;
+  text-align: center;
+  font-family: "Game Of Squids";
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 100;
+  line-height: normal;
 }
-.article4{
-    /* 
-    height: auto;
-    position: absolute; */
-   justify-content: right;
-   display: flex;
-   width: 70%;
-   
-   
-   
+
+.box {
+  width: 100%;
+  height: 40vh;
+  border-radius: 10px;
+  background: linear-gradient(135deg, #007bff, #00d4ff);
+  opacity: 0.8;
 }
-.bg1{
-    background-image: url('C:\Users\pc\Robotics_Club_WebSite\front\All_Section\Events\section3\v3 (1).png');
-    background-position: center;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
-    height: 50VH;
-    z-index: -100;
-    
+
+.team2 .box {
+  background: linear-gradient(135deg, #e4407d, #ff4d94);
+}
+
+.team-name1,.team-name2 {
+  color: #fff;
+  text-align: center;
+  font-family: "Game Of Squids";
+  font-size: 30px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  border-radius: 10px;
+}
+
+.team-name1 {
+  background-color: #00d4ff;
+}
+
+.team-name2 {
+  background-color: #e4407d;
+}
+
+.mouse-lt,.mouse-rt,.mouse-bl,.mouse-br {
+  background-size: contain;
+  background-repeat: no-repeat;
+  width: 150px;
+  height: 5vh;
+  margin: 0;
+}
+
+.mouse-lt {
+  background-image: url("./assets/MouseLT.svg");
+}
+
+.mouse-rt {
+  background-image: url("./assets/MouseRT.svg");
+}
+
+.mouse-bl {
+  background-image: url("./assets/MouseBL.svg");
+}
+
+.mouse-br {
+  background-image: url("./assets/MouseBR.svg");
+}
+
+.img1{
+  position: relative;
+  width: 100%;
+  height: 100%; 
+  background-image: url(assets/Pic11.png);
+  background-size: cover;
+  z-index: -1;
+}
+
+.img2{
+  position: relative;
+  width: 100%;
+  height: 100%; 
+  background-image: url(assets/Pic22.png);
+  background-size: cover;
+  background-position: center;
+  z-index: -1;
 }
