--- a/front/One_Page/Our_Team/our_team.css
+++ b/front/One_Page/Our_Team/our_team.css
@@ -161,6 +161,9 @@ body {
   background-color: #ffffff;
 }
 
+              <svg class="mouse-lt" xmlns="http://www.w3.org/2000/svg" width="39" height="46" viewBox="0 0 39 46" fill="none">
+                <path d="M36.1082 41.9589L30.6865 4.79574L21.8885 19.1898L5.0654 20.7906L36.1082 41.9589Z" fill="#2B9CB8" stroke="white" stroke-width="3"/>
+              </svg>
 .three_small_flesh {
   position: relative;
   display: inline-block;
